# website-dispatch

./: .env.example  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  preview-server.mjs  vite.config.ts
.claude/projects/-Users-ejfox-code-website-dispatch/memory/: MEMORY.md  feedback_stop_relaunching.md  feedback_vault_observation.md
.github/workflows/: release.yml
docs/: RELEASE_SETUP.md
scripts/: cleanup-duplicates.sh  phash_dedupe.py  publish-weekly.sh
src/: App.vue
src-tauri/: Cargo.toml  companion-ui.html  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: alttext.rs  analytics.rs  asset_usage.rs  bin_paths.rs  cloudinary.rs  companion.rs  config.rs  gear.rs  journal.rs  lib.rs  main.rs  menu.rs  obsidian.rs  open.rs  patterns.rs  preview.rs  publish.rs  sketchybar_cache.rs  syndication.rs  syndication_queue.rs  vault.rs  vault_pulse.rs  vault_watcher.rs  webmention.rs
src-tauri/templates/: crowned-post.vue
src/components/: ActionToolbar.vue  AltTextReviewer.vue  BacklinksGraph.vue  CommandPalette.vue  FileList.vue  FilePreview.vue  GearPanel.vue  HelpOverlay.vue  LintReceipt.vue  LocalMediaFixer.vue  LocalMediaSection.vue  MediaLibraryModal.vue  MetadataPanel.vue  OgImagePicker.vue  PublishConfirmModal.vue  PublishingJournal.vue  SearchModal.vue  SettingsModal.vue  StatusBanner.vue  SyndicationWizard.vue  ToastStack.vue  WebmentionReport.vue
src/components/Media/: MediaLibraryDetail.vue  MediaLibraryGrid.vue  MediaLibraryModal.vue  MediaLibrarySidebar.vue
src/composables/: useAppConfig.ts  useAutoUpdate.ts  useConnectionStatus.ts  useGitStatus.ts  useKeyboardShortcuts.ts  usePaletteHistory.ts  usePostActions.ts  usePublishing.ts  useTagSuggestions.ts  useToasts.ts
src/styles/: global.css  rendered-content.css
src/types/: index.ts
src/utils/: formatting.ts  mermaidRenderer.ts  remarkMermaid.ts  remarkObsidianWikilinks.ts
