[package]
name = "website-dispatch"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "shell-execute", "fs-all", "path-all", "dialog-all", "clipboard-all", "notification-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
gray_matter = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
