[package]
name = "website-dispatch"
version = "0.2.1"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "shell-execute", "fs-all", "path-all", "dialog-all", "clipboard-all", "notification-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
gray_matter = "0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "multipart"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2.1"
sha1 = "0.10"
regex = "1.10"
mime_guess = "2.0"
dotenvy = "0.15"
tauri-plugin-window-state = "0.1"
notify = "6.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
