[package]
name = "website-dispatch"
version = "0.4.1"
edition = "2021"

[lib]
name = "website_dispatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "multipart"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
urlencoding = "2.1"
sha1 = "0.10"
regex = "1.10"
mime_guess = "2.0"
dotenvy = "0.15"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
local-ip-address = "0.6"
rand = "0.8"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
